# semiml

./: .dockerignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: a78fe232a278_experiment_model.py  bde9ce6190f8_testing_connection.py  c68635b4664f_files_model.py  f3e184b3f3ec_user_model.py
app/api/: main.py
app/api/routers/: auth.py  experiments.py  files.py  users.py
app/core/: config.py  db.py
app/models/: base.py  experiments.py  files.py  users.py
app/schemas/: experiments.py  files.py  users.py
app/tests/: conftest.py  test_users.py
