[tool.poetry]
name = "semiml"
version = "0.0.0"
description = "semi-auto Machine Learning for structured data."
authors = ["Mohammed Salah <mohammedsalah.superm159@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
httpx = "^0.27.2"
aiofiles = "^24.1.0"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.1.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
alembic = "^1.13.3"
aiosqlite = "^0.20.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
